--- a/style.css
+++ b/style.css
@@ -138,6 +138,9 @@ ul.gallery {
   .container {
     width: auto;
   }
+  .gallery li {
+    margin-bottom: 10px;
+  }
   .overlay img {
     max-width: 100%;
   }
